# gl-gfx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Scenes/: asdf.toml  demo.toml  street.toml
src/Headers/: api.h  app.h  backend.h  camera_system.h  common.h  cursor_manager.h  enums.h  error_handler.h  error_handler.hpp  gl-gfx.hpp  gl_gfx.hpp  input.h  keycodes.h  light_system.h  material_system.h  mesh_system.h  render_system.h  renderer.h  renderer.hpp  resource_manager.h  scene_system.h  serialisation.h  shader_manager.h  shader_manager.hpp  shader_system.h  texture_system.h  transform_system.h  types.h  types.hpp  ui.h  window.hpp
src/Shaders/: default.frag  default.vert
src/Sources/: api.cpp  app.cpp  backend.cpp  camera_system.cpp  common.cpp  cursor_manager.cpp  input.cpp  light_system.cpp  main.cpp  material_system.cpp  mesh_system.cpp  render_system.cpp  renderer.cpp  resource_manager.cpp  scene_system.cpp  serialisation.cpp  shader_manager.cpp  shader_system.cpp  texture_system.cpp  transform_system.cpp  ui.cpp  window.cpp
